[gd_scene load_steps=53 format=3 uid="uid://etww1b82qhl6"]

[ext_resource type="Script" path="res://Player/Prototype/character_body_2d.gd" id="1_bbi0l"]
[ext_resource type="Texture2D" uid="uid://bqtqa2o7wi0px" path="res://Player/Prototype/textures/PrototypeTextSingleImageS.png" id="2_l133p"]
[ext_resource type="Resource" uid="uid://k7wsqdcbf6rb" path="res://Inventory/playerInventoryRes.tres" id="2_r5oxh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_duibq"]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ylo4c"]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id="Animation_l2uj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m45lw"]
resource_name = "dodge_down"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.15, 0.23, 0.31, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_20kye"]
resource_name = "dodge_left"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_ukp2k"]
resource_name = "dodge_right"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65]
}

[sub_resource type="Animation" id="Animation_xfv7a"]
resource_name = "dodge_up"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.44),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_e7ga0"]
resource_name = "idle_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ndvtp"]
resource_name = "idle_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_s2b5x"]
resource_name = "idle_left_sword"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [126, 127, 128, 129, 130, 131]
}

[sub_resource type="Animation" id="Animation_frr0u"]
resource_name = "idle_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_ulje3"]
resource_name = "idle_sword_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125]
}

[sub_resource type="Animation" id="Animation_br2jq"]
resource_name = "idle_sword_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [132, 133, 134, 135, 136, 137]
}

[sub_resource type="Animation" id="Animation_kf3vj"]
resource_name = "idle_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_xe51c"]
resource_name = "idle_up_sword"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [138, 139, 140, 141, 142, 143]
}

[sub_resource type="Animation" id="Animation_8gr8y"]
resource_name = "run_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_3po8e"]
resource_name = "run_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_ivnh1"]
resource_name = "run_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_ufje4"]
resource_name = "run_sword_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147, 148, 149]
}

[sub_resource type="Animation" id="Animation_81rj0"]
resource_name = "run_sword_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [150, 151, 152, 153, 154, 155]
}

[sub_resource type="Animation" id="Animation_dvdw6"]
resource_name = "run_sword_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [156, 157, 158, 159, 160, 161]
}

[sub_resource type="Animation" id="Animation_3egn1"]
resource_name = "run_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_4g4u1"]
resource_name = "attackDown"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yc5je"]
_data = {
"RESET": SubResource("Animation_l2uj4"),
"attackDown": SubResource("Animation_4g4u1"),
"dodge_down": SubResource("Animation_m45lw"),
"dodge_left": SubResource("Animation_20kye"),
"dodge_right": SubResource("Animation_ukp2k"),
"dodge_up": SubResource("Animation_xfv7a"),
"idle_down": SubResource("Animation_e7ga0"),
"idle_left": SubResource("Animation_ndvtp"),
"idle_left_sword": SubResource("Animation_s2b5x"),
"idle_right": SubResource("Animation_frr0u"),
"idle_sword_down": SubResource("Animation_ulje3"),
"idle_sword_right": SubResource("Animation_br2jq"),
"idle_up": SubResource("Animation_kf3vj"),
"idle_up_sword": SubResource("Animation_xe51c"),
"run_down": SubResource("Animation_8gr8y"),
"run_left": SubResource("Animation_3po8e"),
"run_right": SubResource("Animation_ivnh1"),
"run_sword_down": SubResource("Animation_ufje4"),
"run_sword_left": SubResource("Animation_81rj0"),
"run_sword_right": SubResource("Animation_dvdw6"),
"run_up": SubResource("Animation_3egn1")
}

[sub_resource type="Animation" id="Animation_nhfdp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t7mqm"]
resource_name = "hurt"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.501961), Color(1, 0, 0, 0.501961), Color(0.981999, 0.995258, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayijm"]
_data = {
"RESET": SubResource("Animation_nhfdp"),
"hurt": SubResource("Animation_t7mqm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f1xxh"]
animation = &"dodge_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p0o6e"]
animation = &"dodge_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wb837"]
animation = &"dodge_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_26tta"]
animation = &"dodge_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_eej5c"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f1xxh")
blend_point_0/pos = Vector2(0, -1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p0o6e")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_wb837")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_26tta")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_78lkd"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v48f5"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_knls1"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txqab"]
animation = &"run_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8o3la"]
blend_point_0/node = SubResource("AnimationNodeAnimation_78lkd")
blend_point_0/pos = Vector2(0, -1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_v48f5")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_knls1")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_txqab")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y8bwo"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fl48e"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7vtop"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5dxug"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_i6bjd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_y8bwo")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_fl48e")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_7vtop")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_5dxug")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_faw7p"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wm4ht"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n4rgi"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_du16j"]
advance_mode = 2
advance_condition = &"jett_mode"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eg7ky"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_46thw"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nbmiw"]
states/Dodge/node = SubResource("AnimationNodeBlendSpace2D_eej5c")
states/Dodge/position = Vector2(517.68, -35.1725)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_8o3la")
states/Run/position = Vector2(627, 100.25)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_i6bjd")
states/idle/position = Vector2(406, 105.625)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_faw7p"), "idle", "Run", SubResource("AnimationNodeStateMachineTransition_wm4ht"), "Run", "idle", SubResource("AnimationNodeStateMachineTransition_n4rgi"), "Run", "Dodge", SubResource("AnimationNodeStateMachineTransition_du16j"), "Dodge", "Run", SubResource("AnimationNodeStateMachineTransition_eg7ky"), "Dodge", "idle", SubResource("AnimationNodeStateMachineTransition_46thw")]
graph_offset = Vector2(-59.64, -73.6725)

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 10
y_sort_enabled = true
collision_layer = 2
collision_mask = 269
script = ExtResource("1_bbi0l")
inventory = ExtResource("2_r5oxh")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("2_l133p")
hframes = 6
vframes = 27

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -19.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
color = Color(1, 0, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_duibq")

[node name="playerhitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 264

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerhitbox"]
shape = SubResource("CapsuleShape2D_ylo4c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yc5je")
}

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ayijm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_nbmiw")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/conditions/jett_mode = false
parameters/Dodge/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(0, 0)
parameters/idle/blend_position = Vector2(0.00657892, -1.09518)

[node name="dodge_time" type="Timer" parent="."]
wait_time = 0.2

[node name="dodge_cooldown" type="Timer" parent="."]
wait_time = 0.6

[node name="melee_attack_time" type="Timer" parent="."]

[node name="melee_attack_cooldown" type="Timer" parent="."]

[node name="damage_taken_base_cooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="playerhitbox" to="." method="_on_playerhitbox_area_entered"]
[connection signal="body_entered" from="playerhitbox" to="." method="_on_playerhitbox_body_entered"]
[connection signal="body_exited" from="playerhitbox" to="." method="_on_playerhitbox_body_exited"]
[connection signal="timeout" from="dodge_time" to="." method="_on_dodge_time_timeout"]
[connection signal="timeout" from="dodge_cooldown" to="." method="_on_dodge_cooldown_timeout"]
[connection signal="timeout" from="melee_attack_time" to="." method="_on_melee_attack_time_timeout"]
[connection signal="timeout" from="melee_attack_cooldown" to="." method="_on_melee_attack_cooldown_timeout"]
[connection signal="timeout" from="damage_taken_base_cooldown" to="." method="_on_damage_taken_base_cooldown_timeout"]
